--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,6 @@
-Flask==1.1.2
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
-numpy>=1.19.1
-scipy>=1.5.0
-scikit-learn>=0.23.1
-matplotlib>=3.3.0
-pandas>=1.1.0
-
+numpy>=1.9.2
+scipy>=0.15.1
+scikit-learn==0.22.1
+matplotlib>=1.4.3
+pandas>=0.19
+streamlit
